# Engine

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  main.cpp  resources.qrc
shaders/: cube.frag  cube.vert
src/: main.cpp  pch.h
src/ecs/: ECS.cpp  ECS.h
src/ecs/base/: Component.h  ComponentArray.h  Cube.h  EntityManager.h  System.h  Types.h
src/ecs/base/components/: Component.h
src/engine/: Engine.cpp  Engine.h  GameEngine.cpp  GameEngine.h
src/events/: Events.cpp  Events.h
src/renderer/: CMakeLists.txt  camera.cpp  camera.h  cube.h  genericcube.h  plane.h  renderer.cpp  renderer.h  rendererobject.h
src/timer/: Timer.cpp  Timer.h
src/ui/: CMakeLists.txt  ImGuiManager.h  Layout.h  Style.h  mainwindow.cpp  mainwindow.h
src/utility/: LoadShaders.h  Logger.cpp  Logger.h
style/: christmas-style.qss  cyberpunk-style.qss  default-style.qss
